--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
 .App {
   text-align: center;
+  padding: 20px;
+  
+}
+
+.App-header1 {
+  text-align: left;
+  padding: 20px;
+  font-size: calc(10px + 2vmin);
+  color: rgb(99, 4, 4);
+  background-color: #a6c2fa;
 }
 
 .App-logo {
@@ -36,3 +46,29 @@
     transform: rotate(360deg);
   }
 }
+.container .btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: rgb(102, 104, 5);
+  color: white;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+.container {
+  position: relative;
+  width: 100%;
+  max-width: 400px;
+}
+
+/* Make the image responsive */
+/*.container img {
+  width: 100%;
+  height: auto;
+  
+}*/
